# marginalia

./: .gitignore  .mcp.json  CLAUDE.md  README.md  SKILL.md  USAGE.md  pyproject.toml  requirements.txt
.claude-plugin/: marketplace.json  plugin.json
docs/superpowers/plans/: 2026-06-16-marginalia-mcp-skill.md  2026-06-19-freeze-on-done.md  2026-06-19-marginalia-cross-client-repackaging.md
docs/superpowers/specs/: 2026-06-16-marginalia-mcp-skill-design.md  2026-06-17-marginalia-cross-client-design.md  2026-06-19-freeze-on-done-design.md
scripts/: register.sh
server/: http_face.py  mcp_server.py  store.py
server/assets/: annotate.js  theme.css
skills/marginalia/: SKILL.md
src/marginalia/: export.py  mcp_server.py  render.py
src/marginalia/assets/: annotate.js  theme.css
tests/: conftest.py  test_assets.py  test_export.py  test_http_face.py  test_mcp_tools.py  test_render.py  test_store.py
